external-crates/move/crates/move-compiler/tests/move_2024/suggestions/suggestion_1.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: 2024.alpha
  lint: false
---
error[E03005]: unbound unscoped name
  ┌─ tests/move_2024/suggestions/suggestion_1.move:4:25
  │
4 │     public fun call() { goof() }
  │                         ^^^^ Unbound function 'goof' in current scope
